[gd_scene load_steps=4 format=3 uid="uid://ctx5wlgevt7qi"]

[ext_resource type="Script" uid="uid://b8ollwc4il7jk" path="res://scripts/Card.gd" id="1_6u4wf"]
[ext_resource type="SpriteFrames" uid="uid://dvak7aktofje2" path="res://assets/Elf_cards.pxo" id="2_ktuci"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7km1"]
size = Vector2(20, 28)

[node name="Card" type="Node2D"]
script = ExtResource("1_6u4wf")
card_sprite_frames = ExtResource("2_ktuci")
frame_index = 3

[node name="Card_Image" type="Sprite2D" parent="."]

[node name="Card_Collision" type="Area2D" parent="."]

[node name="Card_Area" type="CollisionShape2D" parent="Card_Collision"]
shape = SubResource("RectangleShape2D_f7km1")
